spacing fix and sort fix for periods

--- a/web/style/timetable.css
+++ b/web/style/timetable.css
@@ -293,6 +293,11 @@
         flex-direction: column;
     align-items: center;
     justify-content: center;
+    width: 45%;
+}
+
+.period-styling:nth-child(4) {
+    margin-top: calc(var(--break-height) + 3px);
 }
 
 .period-styling {
